# benchmark

./: README.md
backend-db/go-mariadb/cmd/app/: main.go
backend-db/go-mariadb/internal/config/: getenv.go
backend-db/go-mariadb/internal/model/: auth.go  (+2 more)
flutter_benchmark/: README.md  pubspec.yaml
flutter_benchmark/ios/Runner/: Info.plist
flutter_benchmark/lib/: main.dart
flutter_benchmark/lib/models/: video_info.dart
flutter_benchmark/lib/screens/: home_screen.dart  preview_screen.dart
flutter_benchmark/linux/runner/: my_application.cc
flutter_benchmark/test/: widget_test.dart
flutter_benchmark/web/: index.html  manifest.json
flutter_benchmark/windows/: CMakeLists.txt
flutter_benchmark/windows/runner/: Runner.rc  main.cpp
go-mariadb-benchmark/: go.mod  go.sum
go-mariadb-benchmark/cmd/main/: main.go
go-mariadb-benchmark/internal/app/: app.go
go-mariadb-benchmark/internal/config/: config.go  getenv.go
go-mariadb-benchmark/internal/db/: db.go
go-mariadb-benchmark/internal/model/: auth.go  user.go
go-mariadb-benchmark/internal/repo/: auth.go  repo.go  upload.go  user.go
go-mariadb-benchmark/internal/repository/: user.go
go-mariadb-benchmark/internal/service/: contracts.go  user.go
mobile/flutter/linux/: CMakeLists.txt
mobile/flutter/web/: index.html  manifest.json
mobile/react-native/: package-lock.json
react-benchmark/: App.tsx  app.json  package.json
react-benchmark/src/screens/: CameraScreen.tsx  HomeScreen.tsx  PreviewScreen.tsx
rust-benchmark/: .env  Cargo.toml  docker-compose.yml
rust-benchmark/src/: main.rs
(+31 files in other folders)
