[package]
name = "rust-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bcrypt = "0.17"
dotenvy = "0.15"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1", features = ["derive"] }
log = "0.4.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
